network/cilium/k8s/k8s-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: secure-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  # all DNS resolution
  egress:
  - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
